@@ -16,6 +16,10 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.oauth2.client.web.DefaultOAuth2AuthorizationRequestResolver;
+import org.springframework.security.oauth2.client.web.OAuth2AuthorizationRequestResolver;
+import org.springframework.security.oauth2.core.endpoint.OAuth2AuthorizationRequest;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.context.DelegatingSecurityContextRepository;
@@ -27,8 +31,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @Configuration
 @EnableWebSecurity
@@ -50,7 +57,10 @@ public class SecurityConfig {
     private JwtTokenProvider jwtTokenProvider;
 
     @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;  // JWT 필터 추가
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Autowired
+    private ClientRegistrationRepository clientRegistrationRepository;
 
     @Bean
     public SecurityContextRepository securityContextRepository() {
@@ -66,19 +76,23 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session
-                        // OAuth2 인증을 위해 IF_REQUIRED로 변경
+                        // OAuth2 인증을 위해 IF_REQUIRED로 설정
                         .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
                         .sessionFixation().migrateSession()
+                        .invalidSessionUrl("/login")
+                        .maximumSessions(1)
+                        .maxSessionsPreventsLogin(false)
                 )
                 .authorizeHttpRequests(authorize -> authorize
                         // 정적 리소스
                         .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
+                        .requestMatchers("/favicon.ico", "/favicon.svg", "/favicon-*.png", "/apple-touch-icon.png").permitAll()
 
                         // 메인 페이지
                         .requestMatchers("/", "/index", "/main/**").permitAll()
 
                         // API 및 인증 관련
-                        .requestMatchers("/api/auth/**", "/login", "/oauth2/**").permitAll()
+                        .requestMatchers("/api/auth/**", "/login", "/oauth2/**", "/login/oauth2/**").permitAll()
                         .requestMatchers("/oauth2-redirect.html", "/error").permitAll()
 
                         // 디버그 및 모니터링
@@ -88,17 +102,18 @@ public class SecurityConfig {
                 )
                 .oauth2Login(oauth2 -> oauth2
                         .loginPage("/login")
+                        .authorizationEndpoint(authorization -> authorization
+                                .baseUri("/oauth2/authorize")
+                                .authorizationRequestResolver(customAuthorizationRequestResolver())
+                        )
+                        .redirectionEndpoint(redirection -> redirection
+                                .baseUri("/login/oauth2/code/*")
+                        )
                         .userInfoEndpoint(userInfo -> userInfo
                                 .userService(customOAuth2UserService)
                         )
                         .successHandler(oAuth2AuthenticationSuccessHandler)
                         .failureHandler(oAuth2AuthenticationFailureHandler)
-                        .authorizationEndpoint(authorization -> authorization
-                                .baseUri("/oauth2/authorize")
-                        )
-                        .redirectionEndpoint(redirection -> redirection
-                                .baseUri("/login/oauth2/code/*")
-                        )
                 );
 
         // JWT 필터 추가
@@ -107,66 +122,56 @@ public class SecurityConfig {
         return http.build();
     }
 
-    /* 주석 처리
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public OAuth2AuthorizationRequestResolver customAuthorizationRequestResolver() {
+        DefaultOAuth2AuthorizationRequestResolver defaultResolver =
+                new DefaultOAuth2AuthorizationRequestResolver(
+                        clientRegistrationRepository, "/oauth2/authorize");
 
+        return new OAuth2AuthorizationRequestResolver() {
+            @Override
+            public OAuth2AuthorizationRequest resolve(HttpServletRequest request) {
+                OAuth2AuthorizationRequest authorizationRequest = defaultResolver.resolve(request);
+                return customizeAuthorizationRequest(authorizationRequest);
+            }
+
+            @Override
+            public OAuth2AuthorizationRequest resolve(HttpServletRequest request, String clientRegistrationId) {
+                OAuth2AuthorizationRequest authorizationRequest =
+                        defaultResolver.resolve(request, clientRegistrationId);
+                return customizeAuthorizationRequest(authorizationRequest);
+            }
+
+            private OAuth2AuthorizationRequest customizeAuthorizationRequest(
+                    OAuth2AuthorizationRequest authorizationRequest) {
+                if (authorizationRequest == null) {
+                    return null;
+                }
+
+                // 추가 파라미터 설정 (필요시)
+                Map<String, Object> additionalParameters = new HashMap<>(
+                        authorizationRequest.getAdditionalParameters());
+
+                // 무한 리다이렉트 방지를 위한 state 검증 강화
+                additionalParameters.put("prompt", "select_account");
+
+                return OAuth2AuthorizationRequest.from(authorizationRequest)
+                        .additionalParameters(additionalParameters)
+                        .build();
+            }
+        };
     }
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)  // JWT 사용 시 STATELESS로 변경
-                        .sessionFixation().migrateSession()
-                        .maximumSessions(1)
-                        .maxSessionsPreventsLogin(false)
-                )
-                .securityContext(securityContext -> securityContext
-                        .securityContextRepository(securityContextRepository())
-                )
-                .authorizeHttpRequests(authorize -> authorize
-                        // 정적 리소스는 Spring Boot의 기본 경로 사용
-                        .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
-
-                        // 메인 페이지
-                        .requestMatchers("/", "/index", "/main/**").permitAll()
-
-                        // API 및 인증 관련
-                        .requestMatchers("/api/auth/**", "/login", "/oauth2/**").permitAll()
-                        .requestMatchers("/oauth2-redirect.html", "/error").permitAll()
-
-                        // 디버그 및 모니터링
-                        .requestMatchers("/oauth2-debug", "/actuator/health").permitAll()
-
-                        .anyRequest().authenticated()
-                )
-                // JWT 필터를 UsernamePasswordAuthenticationFilter 전에 추가
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .oauth2Login(oauth2 -> oauth2
-                        .loginPage("/login")
-                        .userInfoEndpoint(userInfo -> userInfo
-                                .userService(customOAuth2UserService)
-                        )
-                        .successHandler(oAuth2AuthenticationSuccessHandler)
-                        .failureHandler(oAuth2AuthenticationFailureHandler)
-                        .authorizationEndpoint(authorization -> authorization
-                                .baseUri("/oauth2/authorize")
-                        )
-                        .redirectionEndpoint(redirection -> redirection
-                                .baseUri("/login/oauth2/code/*")
-                        )
-                );
-
-        return http.build();
-    }
-    */
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // allowedOriginPatterns를 사용하여 모든 origin 허용
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // 특정 도메인만 허용하도록 수정 (보안 강화)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "https://ocean-app.click",
+                "http://localhost:3000", // 개발용
+                "http://localhost:8080"  // 개발용
+        ));
 
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
